--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,15 @@ dependencies:
   # UI Enhancements
   google_fonts: ^6.1.0
   flutter_svg: ^2.0.9
+  carousel_slider: ^5.0.0
+  shimmer: ^3.0.0
+  flutter_staggered_grid_view: ^0.7.0
+  badges: ^3.1.2
+  smooth_page_indicator: ^1.1.0
+  fl_chart: ^0.66.2
+  liquid_pull_to_refresh: ^3.0.1
+  confetti: ^0.7.0
+  flutter_slidable: ^3.0.1
 
   # Utilities
   intl: ^0.19.0
